--- a/semana-13/package.json
+++ b/semana-13/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/mariliamessias/projeto-porto-integracao#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
